# ChangeLog for perl-core/Test
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Test/ChangeLog,v 1.9 2006/08/04 13:31:50 mcummings Exp $

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> Test-1.24.ebuild,
  Test-1.25.ebuild:
  Adding perl dep

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> Test-1.24.ebuild,
  Test-1.25.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  03 Dec 2005; Tom Gall <tgall@gentoo.org> Test-1.25.ebuild:
  stable on ppc64

  04 Jun 2005; Michael Cummings <mcummings@gentoo.org> Test-1.25.ebuild:
  Tested on raq2, bumping for mips

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Test-1.25.ebuild:
  dev-perl/Test-Harness => perl-core/Test-Harness migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Test-1.24.ebuild:
  dev-perl/Test-Harness => perl-core/Test-Harness migration

*Test-1.25 (24 May 2005)

  24 May 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Test-1.24.ebuild, +Test-1.25.ebuild:
  dev-perl => perl-core migration

  25 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> Test-1.25.ebuild:
  Stable on alpha.

  11 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> Test-1.25.ebuild:
  Stable on amd64.

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> Test-1.25.ebuild:
  Stable on ppc.

  02 Apr 2005; Michael Cummings <mcummings@gentoo.org> Test-1.25.ebuild:
  Marking stable for x86 and sparc

  23 Dec 2004; Yuta SATOH <nigoro@gentoo.org> Test-1.25.ebuild:
  added ~ppc64

*Test-1.25 (06 Jun 2004)

  06 Jun 2004; Michael Cummings <mcummings@gentoo.org> Test-1.25.ebuild:
  new version on cpan

  22 Jun 2003; <rac@gentoo.org> Test-1.24.ebuild:
  replace missing arch keywords

  08 Jun 2003; <rac@gentoo.org> Test-1.24.ebuild:
  Add IUSE, stabilize URL, fix header

*Test-1.24 (31 May 2003)

  31 May 2003; Michael Cummings <mcummings@gentoo.org> Test-1.24.ebuild: